#312 Fix fullscreen image on mobile

--- a/src/app/pages/status/status.page.scss
+++ b/src/app/pages/status/status.page.scss
@@ -72,6 +72,7 @@
             margin-bottom: 10px;
             padding: 4px 20px;
             width: fit-content;
+            max-width: 300px;
         }
     }
 
@@ -108,7 +109,7 @@
 }
 
 .photo-container-table {
-    display:table;
+    display: table;
 }
 
 .note {
